<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">大漩涡</string>
    <string name="login">登陆</string>
    <string name="account_hint">用户名</string>
    <string name="pwd_hint">密码</string>
    <string name="back">返回</string>
    <string name="exit_hint">再按一次退出</string>

    <!-- bottom bar -->
    <string name="refresh">刷新</string>
    <string name="new_post">发帖</string>
    <string name="reply">回帖</string>
    <string name="personal">个人中心</string>
    <string name="setting">设置</string>
    <string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://sharesdk.cn @ShareSDK</string>
    <string name="share">分享</string>

</resources>