<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/title" />

    <EditText
        android:id="@+id/login_account"
        style="@style/editbox"
        android:layout_below="@+id/title_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:hint="@string/account_hint" />

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_account"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_editbox"
        android:hint="@string/pwd_hint"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#000"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_pwd"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/login_btn"
            android:onClick="onLogin"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_btn"
            android:text="@string/login"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>